@startuml
Room }|..|| RoomType
Bed }|.u.|| Room
Room }|.l.|| Station
Bed ||..o{ Bed_Patient
Bed_Patient }|..|| Patient
Patient ||..|{ Patient_MedicalStaff
MedicalStaff ||..|{ Patient_MedicalStaff
MedicalStaff <|.. Doctor
MedicalStaff <|.. Nurse
Person <|.. MedicalStaff
Person <|.. Patient

Patient ||..|{ Patient_Condition
Condition ||.u.|{ Patient_Condition

Condition ||..|{ Symptom_Condition
Symptom_Condition }|..|| Symptom

Doctor ||..|{ Doctor_Specialization
Doctor_Specialization }|..|| Specialization

circle "Komposite Key bei Assotiationstabellen"

class Room {
 strong
}

class Bed {
 weak
}

class Station {
 weak
}

class Bed_Patient {
 weak
}

class Patient {
 strong
}

class Patient_Condition {
 weak
}

class Condition {
 strong
}

class Doctor {
 weak
}

class Nurse {
 weak
}

class MedicalStaff {
 strong
}

class Patient_MedicalStaff {
 weak
}

class RoomType{
    weak
}

class Symptom{
    weak
}

class Symptom_Condition{
    weak
}

@enduml

